[package]
name = "smartstr"
description = "Smart, multi-purpose string."
authors = ["ErisianArchitect <github.com/ErisianArchitect>"]
repository = "https://github.com/ErisianArchitect/smartstr"
license = "MIT"
version = "0.2.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
lolevel = "0.6.1-indev"
paste = "1.0.15"
serde = { version = "1.0.228", optional = true }
